--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.BgImage{
+  background-image: url(./Assets/clouds.jpeg);
+  background-size: cover;
+  background-position: center center;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  min-width: 100vw;
+}
+
+.ButtonFormat{
+  border-radius: 15px;
+  padding: 10px;
+  color: blue;
+  text-align: center;
+  font-weight: Bold;
+  font-size: 15px;
+}
+
+.ButtonFormat1{
+  border-radius: 15px;
+  padding: 10px;
+  background-color: blue;
   color: white;
+  text-align: center;
+  font-weight: Bold;
+  font-size: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.HeaderFormat{
+  color: Blue;
+  font-size: 55px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li{
+  list-style: none;
+}
+
+.dark-bg {
+  background-color: #333; /* Replace with your desired dark color */
+  padding: 5px; /* Add some padding to make the background visible */
+}
+
+.cardradius{
+  border-radius: 35px;
 }
